Add more content and styling for it

--- a/recipes/porridge.html
+++ b/recipes/porridge.html
@@ -3,24 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./page-styles.css">
     <title>Barley Porridge</title>
 </head>
 <body>
     <div class="container">
-        <h1>Barley Porridge</h1>
         <div class="img">
+            <h1>Barley Porridge</h1>
             <img src="../images/porridge.jpg" alt="a bowl of porridge and a cup of coffee" width="800">
         </div>
         <div class="recipe">
             <h2>Description</h2>
-            <p>When the searing rays of the morning sun have chased the Viking out of bed, it's breakfast:<br>
-
-                Oat porridge Barley porridge Beer bread<br>
-                For the porridge maybe a dollop of butter<br>
-                Sour milk with dried fruit and nuts<br>
-                Bread with butter and cheese<br>
-                Maybe a piece of cold meat if there was something "left over from yesterday"<br>
-                or a fatty piece of herring.</p>
+            <p>When the searing rays of the morning sun have chased the Viking out of bed, it's breakfast:<br class="main-br">
+    
+                <em>
+                    Oat porridge, Barley porridge, Beer bread<br>
+                    For the porridge maybe a dollop of butter,<br>
+                    Sour milk with dried fruit and nuts,<br>
+                    Bread with butter and cheese,<br>
+                    Maybe a piece of cold meat if there was something "left over from yesterday"<br>
+                    or a fatty piece of herring.
+                </em></p>
                 <h2>Ingredients</h2>
                 <ul>
                     <li>3-4 dl coarsely ground barley flour</li>
@@ -35,7 +38,7 @@
                     <li>The water can be completely or partially replaced with milk, but then the porridge will burn easily. If you have made butter, you can conveniently add the buttermilk from there.</li>
                 </ol>
         </div>
-        <a href="../index.html">Back</a>
+        <div class="links"><a href="../index.html">Back</a></div>
     </div>
 </body>
 </html>
