Add nav buttons and responsive layout

--- a/recipes/bread.html
+++ b/recipes/bread.html
@@ -8,27 +8,36 @@
   </head>
   <body>
     <div class="container">
-      <div class="img">
-        <h1>Small Flat Breads</h1>
-        <img src="../images/bread.jpg" alt="small flat breads" width="800" />
+      <div class="presentation">
+        <div class="img">
+          <h1>Small Flat Breads</h1>
+          <img src="../images/bread.jpg" alt="small flat breads" width="800" />
+          <div class="nav">
+            <div class="links"><a href="./porridge.html">Previous</a></div>
+            <div class="links"><a href="../index.html">Menu</a></div>
+            <div class="links"><a href="soup.html">Next &rarr;</a></div>
+          </div>
+        </div>
+        <div class="info">
+          <h2>Description</h2>
+          <p>
+            During the Viking Age, bread was usually baked in the form of flat
+            cakes on embers, directly on the stone slab or on so-called frying
+            pans, flat plates with long handles that were held over an open
+            hearth. There were also occasional vaulted baking ovens for larger
+            leavened breads.
+          </p>
+          <p>
+            The higher you were on the social ladder, the finer bread you ate.
+            Flat breads were often used as plates to eat from. The sauce from
+            what you ate was then absorbed by the bread and eventually you could
+            sink your teeth into the bread - if you were still hungry. In the
+            cases where the bread was eaten as a plate, the bread was of a
+            coarser kind.
+          </p>
+        </div>
       </div>
       <div class="recipe">
-        <h2>Description</h2>
-        <p>
-          During the Viking Age, bread was usually baked in the form of flat
-          cakes on embers, directly on the stone slab or on so-called frying
-          pans, flat plates with long handles that were held over an open
-          hearth. There were also occasional vaulted baking ovens for larger
-          leavened breads.
-        </p>
-
-        <p>
-          The higher you were on the social ladder, the finer bread you ate.
-          Flat breads were often used as plates to eat from. The sauce from what
-          you ate was then absorbed by the bread and eventually you could sink
-          your teeth into the bread - if you were still hungry. In the cases
-          where the bread was eaten as a plate, the bread was of a coarser kind.
-        </p>
         <h2>Ingredients</h2>
         <ul>
           <li>Flour</li>
@@ -60,7 +69,6 @@
           </li>
         </ol>
       </div>
-      <div class="links"><a href="../index.html">Back</a></div>
     </div>
   </body>
 </html>
