--- a/recipes/porridge.html
+++ b/recipes/porridge.html
@@ -1,44 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./page-styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./page-styles.css" />
     <title>Barley Porridge</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
+      <div class="presentation">
         <div class="img">
-            <h1>Barley Porridge</h1>
-            <img src="../images/porridge.jpg" alt="a bowl of porridge and a cup of coffee" width="800">
-        </div>
-        <div class="recipe">
+          <h1>Barley Porridge</h1>
+          <img
+            src="../images/porridge.jpg"
+            alt="a bowl of porridge and a cup of coffee"
+            width="800"
+          />
+          <div class="nav">
+            <div class="links"><a href="./soup.html">Previous</a></div>
+            <div class="links"><a href="../index.html">Menu</a></div>
+            <div class="links"><a href="./bread.html">Next &rarr;</a></div>
+          </div>
+          <div class="info">
             <h2>Description</h2>
-            <p>When the searing rays of the morning sun have chased the Viking out of bed, it's breakfast:<br class="main-br">
-    
-                <em>
-                    Oat porridge, Barley porridge, Beer bread<br>
-                    For the porridge maybe a dollop of butter,<br>
-                    Sour milk with dried fruit and nuts,<br>
-                    Bread with butter and cheese,<br>
-                    Maybe a piece of cold meat if there was something "left over from yesterday"<br>
-                    or a fatty piece of herring.
-                </em></p>
-                <h2>Ingredients</h2>
-                <ul>
-                    <li>3-4 dl coarsely ground barley flour</li>
-                    <li>1 liter of water</li>
-                    <li>2 apples and possibly a handful of hazelnuts</li>
-                    <li>salt</li>
-                </ul>
-                <h2>Steps</h2>
-                <ol>
-                    <li>Boil the water. When the water boils, whisk in the flour a little at a time. Continue boiling for 5 minutes, stirring constantly. The apples and chopped nuts are cooked with the last few minutes. Remove the pan from the heat and set it near the heat for 1/2 to 1 hour.</li>
-                    <li>A little honey or a dab of butter on top of the porridge is good. The apples can be replaced or supplemented with seasonal berries and fruits.</li>
-                    <li>The water can be completely or partially replaced with milk, but then the porridge will burn easily. If you have made butter, you can conveniently add the buttermilk from there.</li>
-                </ol>
+            <p>
+              When the searing rays of the morning sun have chased the Viking
+              out of bed, it's breakfast:<br class="main-br" />
+              <em>
+                Oat porridge, Barley porridge, Beer bread<br />
+                For the porridge maybe a dollop of butter,<br />
+                Sour milk with dried fruit and nuts,<br />
+                Bread with butter and cheese,<br />
+                Maybe a piece of cold meat if there was something "left over
+                from yesterday"<br />
+                or a fatty piece of herring.
+              </em>
+            </p>
+          </div>
         </div>
-        <div class="links"><a href="../index.html">Back</a></div>
+      </div>
+      <div class="recipe">
+        <h2>Ingredients</h2>
+        <ul>
+          <li>3-4 dl coarsely ground barley flour</li>
+          <li>1 liter of water</li>
+          <li>2 apples and possibly a handful of hazelnuts</li>
+          <li>salt</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+          <li>
+            Boil the water. When the water boils, whisk in the flour a little at
+            a time. Continue boiling for 5 minutes, stirring constantly. The
+            apples and chopped nuts are cooked with the last few minutes. Remove
+            the pan from the heat and set it near the heat for 1/2 to 1 hour.
+          </li>
+          <li>
+            A little honey or a dab of butter on top of the porridge is good.
+            The apples can be replaced or supplemented with seasonal berries and
+            fruits.
+          </li>
+          <li>
+            The water can be completely or partially replaced with milk, but
+            then the porridge will burn easily. If you have made butter, you can
+            conveniently add the buttermilk from there.
+          </li>
+        </ol>
+      </div>
     </div>
-</body>
+  </body>
 </html>
