--- a/recipes/soup.html
+++ b/recipes/soup.html
@@ -8,27 +8,35 @@
   </head>
   <body>
     <div class="container">
-      <div class="img">
-        <h1>Broth</h1>
-        <img
-          src="../images/soup.jpg"
-          alt="a bowl of soup and two slices of bread"
-          width="800"
-        />
+      <div class="presentation">
+        <div class="img">
+          <h1>Broth</h1>
+          <img
+            src="../images/soup.jpg"
+            alt="a bowl of soup and two slices of bread"
+            width="800"
+          />
+          <div class="nav">
+            <div class="links"><a href="./bread.html">Previous</a></div>
+            <div class="links"><a href="../index.html">Menu</a></div>
+            <div class="links"><a href="./porridge.html">Next &rarr;</a></div>
+          </div>
+          <div class="info">
+            <h2>Description</h2>
+            <p>
+              It has often been stated that food in prehistoric times was
+              monotonous and tasteless. It may of course have been the case
+              where living conditions have been on the verge of starvation and
+              survival.
+            </p>
+            <p>
+              But for the fun-loving Viking, there were plenty of opportunities!
+            </p>
+            <p>Salt and hunger are the best spices!</p>
+          </div>
+        </div>
       </div>
       <div class="recipe">
-        <h2>Description</h2>
-        <p>
-          It has often been stated that food in prehistoric times was monotonous
-          and tasteless. It may of course have been the case where living
-          conditions have been on the verge of starvation and survival.
-        </p>
-
-        <p>
-          But for the fun-loving Viking, there were plenty of opportunities!
-        </p>
-
-        <p>Salt and hunger are the best spices!</p>
         <h2>Ingredients</h2>
         <ul>
           <li>1 - 1 1/2 liters of water</li>
@@ -62,7 +70,6 @@
           </li>
         </ol>
       </div>
-      <div class="links"><a href="../index.html">Back</a></div>
     </div>
   </body>
 </html>
