--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Odin Recipes</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="./recipes/porridge.html">Barley porridge</a></li>
-            <li><a href="./recipes/bread.html">Small flat breads</a></li>
-            <li><a href="./recipes/soup.html">Broth</a></li>
-        </ul>
+      <h1>Odin Recipes</h1>
+      <ul>
+        <li><a href="./recipes/porridge.html">Barley porridge</a></li>
+        <li><a href="./recipes/bread.html">Small flat breads</a></li>
+        <li><a href="./recipes/soup.html">Broth</a></li>
+      </ul>
     </div>
-    <p>Recipes were taken from <a href="https://www.fotevikensmuseum.se/" target="_blank noopener noreferrer">Fotevikens Museum</a></p>
-</body>
+    <p>
+      Recipes were taken from
+      <a
+        href="https://www.fotevikensmuseum.se/d/en/vikingar/hur/mat/recept"
+        target="_blank noopener noreferrer"
+        >Fotevikens Museum</a
+      >
+    </p>
+  </body>
 </html>
